deployment/kubernetes/ba-api-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ba-api-cd
  namespace: ba
  annotations:
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ba-api-cd
  template:
    metadata:
      labels:
        app: ba-api-cd
    spec:
      containers:
      - name: ba-api-cd
        image: registry.gitlab.com/mklug-git/ba1-spring:1.0.33
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      imagePullSecrets:
      - name: gitlab
