deployment/kubernetes/ba-keycloak-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ba-keycloak
  namespace: ba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ba-keycloak
  template:
    metadata:
      labels:
        app: ba-keycloak
    spec:
      containers:
      - name: ba-keycloak
        image: jboss/keycloak:9.0.2
        ports:
        - containerPort: 8080
          name: keycloak
          protocol: TCP
