deployment/kubernetes/ba-postgres-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ba-postgres
  namespace: ba
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ba-postgres
  template:
    metadata:
      labels:
        app: ba-postgres
    spec:
      containers:
      - name: ba-mysql
        image: postgres:12.2
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
