deployment/kubernetes/ba-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ba-api-cd
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ba-api-cd
  type: ClusterIP
