deployment/kubernetes/ba-keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ba-keycloak
  namespace: ba
spec:
  ports:
    - name: keycloak
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ba-keycloak
  type: ClusterIP
