deployment/kubernetes/ba-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ba-mysql
  namespace: ba
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: ba-mysql
  type: ClusterIP
