deployment/kubernetes/ba-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ba-postgres
  namespace: ba
spec:
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: ba-postgres
  type: ClusterIP
