deployment/kubernetes/ba-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ba-api-cd
  namespace: ba
spec:
  rules:
    - host: ba-api.cloud.mklug.at
      http:
        paths:
          - backend:
              serviceName: ba-api-cd
              servicePort: 8080
  tls:
    - hosts:
        - ba-api.cloud.mklug.at
      secretName: tls-ba-api
